--- a/30a.html
+++ b/30a.html
@@ -12,7 +12,7 @@
 <canvas id="canvas" height="569" width="1280">try this in a browser that supports the canvas tag</canvas>
 
 
-<script type="text/javascript" async="" src="./JS/1.js"></script><script type="text/javascript" src="./js/1_1.js"></script>
+<script type="text/javascript" async="" src="./JS/1.js.download"></script><script type="text/javascript" src="./JS/1_1.js.download"></script>
 
 <script type="text/javascript">
 
@@ -153,19 +153,5 @@ function animloop(){
 animloop();
 
 window.top.scrollTo(0, 1);
-</script>
 
-<script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-3889624-4']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script>
 </body></html>
