--- a/Index.html
+++ b/Index.html
@@ -16,17 +16,13 @@
 		this requires javascript
 	</canvas>
 	<script type="text/javascript" async="" src="./april 06_files/ga.js.download"></script><script type="text/javascript" src="./april 06_files/06.js.download"></script>
-	<script type="text/javascript" id="ga.js">
-	    var _gaq = _gaq || [];
-	    _gaq.push(['_setAccount', 'UA-3889624-4']);
-	    _gaq.push(['_trackPageview']);
-	    (function () {
-	        var ga = document.createElement('script');
-	        ga.type = 'text/javascript';
-	        ga.async = true;
-	        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-	        var s = document.getElementsByTagName('script')[0];
-	        s.parentNode.insertBefore(ga, s);
-	    })();
-	</script>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-P14C8L6D69"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-P14C8L6D69');
+</script>
 </body></html>
