--- a/Index.html
+++ b/Index.html
@@ -23,6 +23,6 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-P14C8L6D69');
+  gtag('config', 'G-S6G1H8MRQ8');
 </script>
 </body></html>
