--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,7 @@
 	</canvas>
 	<script type="text/javascript" async="" src="./april 06_files/ga.js.download"></script><script type="text/javascript" src="./april 06_files/06.js.download"></script>
 	<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-P14C8L6D69"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-S6G1H8MRQ8"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
